# influxdb-cxx

./: .clang-format  .clang-format-ignore  .codecov.yml  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  conanfile.py
.github/workflows/: ci.yml  codeql.yml  systemtest.yml
cmake/: FindCURL.cmake  InfluxDBConfig.cmake.in  clang22_workaround.cmake
conan/: CMakeLists.txt
include/: InfluxDB.h  InfluxDBBuilder.h  InfluxDBException.h  InfluxDBFactory.h  InfluxDBPoint.h  InfluxDBProxy.h  InfluxDBTransport.h  Point.h  Proxy.h  Transport.h
include/InfluxDB/: InfluxDB.h  InfluxDBBuilder.h  InfluxDBException.h  InfluxDBFactory.h  Point.h  Proxy.h  TimePrecision.h  Transport.h
script/: ci_build.sh  ci_setup.sh  ci_setup_influxdb.sh  ci_test.sh  ci_testdeploy.sh  settings.yml  travis_ci_conan_build.sh  travis_ci_post_codecov.sh  travis_ci_setup.sh  travis_ci_setup_influxdb.sh  travis_codecov_post.sh
script/include_library/: CMakeLists.txt  main.cpp  main.cxx
src/: BoostSupport.cxx  BoostSupport.h  CMakeLists.txt  HTTP.cxx  HTTP.h  InfluxDB.cxx  InfluxDBBuilder.cxx  InfluxDBException.h  InfluxDBFactory.cxx  LineProtocol.cxx  LineProtocol.h  NoBoostSupport.cxx  Point.cxx  Proxy.cxx  TCP.cxx  TCP.h  UDP.cxx  UDP.h  UnixSocket.cxx  UnixSocket.h  UriParser.h
test/: BoostSupportTest.cxx  CMakeLists.txt  HttpTest.cxx  InfluxDBFactoryTest.cxx  InfluxDBTest.cpp  InfluxDBTest.cxx  LineProtocolTest.cxx  NoBoostSupportTest.cxx  PointTest.cpp  PointTest.cxx  ProxyTest.cxx  TestMain.cpp  TestMain.cxx  UDPTest.cxx  UriParserTest.cxx  benchmark.cxx  testFactory.cxx  testHttp.cxx  testInfluxDB.cxx  testPoint.cxx  testQuery.cxx  testUdp.cxx
test/integration/: CMakeLists.txt  InfluxDBIT.cxx
test/mock/: CMakeLists.txt  CprMock.cxx  CprMock.h  CurlMock.cxx  CurlMock.h  TransportMock.h
test/system/: CMakeLists.txt  HttpAuthST.cxx  InfluxDBST.cxx  SystemTest.h
test_package/: CMakeLists.txt  conanfile.py  example.cpp
